...
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointsRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pointsRewards"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/pointsLabelRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointsRewardsText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/pointsRewards" />

    <EditText
        android:id="@+id/rewardText"
        android:layout_width="269dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/text_border"
        android:hint="@string/rewardsText"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|number"
        android:digits="0,1,2,3,4,5,6,7,8,9"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/rewardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRewards" />

    <Button
        android:id="@+id/rewardButton"
        android:layout_width="269dp"
        android:layout_height="95dp"
        android:layout_marginBottom="40dp"
...
