...
    android:background="@drawable/toast_border"
    android:layout_gravity="center"

    >

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:contentDescription="@string/closeButton"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:tint="#f7fff2"
        app:srcCompat="@drawable/xbtn" />

    <TextView
        android:id="@+id/popupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp"
        android:textColor="@color/colorAccent"
...
