<resources>
    <string name="app_name">LibRewards</string>
    <string name="start"> start </string>
    <string name="stop"> stop </string>
    <string name="timer"> Timer </string>
    <string name="rewards"> Rewards </string>
    <string name="helpButton">help button</string>
    <string name="helpInfo">Welcome to Lib Rewards\n\nHere, you will be awarded points for the duration of your time spent at the library. Simply
        enter the library\'s start and stop code for the day to be awarded the points. Once you have enough points, you can then visit the library
        shop to spend them. A full list of goodies and their cost will be on display in there. The more points you rack up, the more rewards
        you\'ll get. Here\'s how many points you\'ll get for the time spent at the library:<b> \n\n10 - 30 minutes = 10 points\n30 - 45 minutes =
        50 points\n45 - 60 minutes = 75 points\n1 - 2 hours = 125 points\n2 - 3 hours = 225 points\n3 - 5 hours = 400 points\n5 or more hours
            = 700 points</b>\n\nPlease note that after 24 hours of not entering a stop code the stopwatch will reset.</string>
    <string name="getRewardedNow">Get Rewarded Now!</string>
    <string name="rewardsText">Please enter your chosen reward code</string>
    <string name="pointsRewards">TextView</string>
    <string name="pointsRewardsText">Points</string>
    <string name="pointsholder">pointsHolder</string>
    <string name="pointsTimer">TextView</string>
    <string name="pointsTextTimer">Points</string>
    <string name="startText">Please enter the start code</string>
    <string name="pointsholdertimer">pointsHolderTimer</string>
    <string name="closeButton">close button</string>
    <string name="name">name</string>
    <string name="nameRequest">Welcome to Lib Rewards! Can we start by taking your name, please?</string>
    <string name="enterName">Name</string>
    <string name="noNameEntered">No name was entered, please try again</string>
    <string name="letsGo">Let\'s Go!</string>
    <string name="welcome">\Hey, %1$s</string>
    <string name="insufficientFunds">Woops! Unfortunately you don\'t have sufficient points for this reward. Please choose another reward
    or carry on doing a great job at the library to be able to get this</string>
    <string name="invalidCode">The code you entered is not valid, please try again</string>
    <string name="rewardCodeAccepted">Code accepted, keep it up! Your new points balance is: %1$d</string>
    <string name="emptyCode">No code was entered, please try again</string>
    <string name="noCodeEnteredInADay">"No stop code was entered for 24 hours. The timer has been reset"</string>
    <string name="congratsMessage">Well done, you spent %1$d %2$s at the library and have earned %3$d points!\nYour new points balance is: %4$d</string>
    <string name="unfortunatelyMessage">"Unfortunately you have not spent the minimum required time at the library to receive points!"</string>
</resources>
