...
            <EditText
                android:id="@+id/enterName"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/enterName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/popupText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#f7fff2"
...
